--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gifify": "^2.4.3",
     "internal-ip": "^1.2.0",
     "is-git-repository": "^1.1.1",
-    "open": "0.0.5",
+    "open": "^6.0.0",
     "ora": "^1.2.0",
     "random-item": "^1.0.0",
     "simple-git": "^1.84.0"
